# idr_bm_scripts

./: Cargo.toml
idrbm_compzsc/: Cargo.toml
idrbm_compzsc/src/: main.rs  utils.rs
idrbm_core/: Cargo.toml
idrbm_core/src/: lib.rs
idrbm_core/src/csv/: duplicate_rule.rs  mod.rs  utils.rs
idrbm_core/src/datatypes/: grouped.rs  mod.rs  records.rs  regions.rs
idrbm_core/src/datatypes/idrbm/: grouped.rs  mod.rs  records.rs  regions.rs
idrbm_core/src/datatypes/sequences/: aamap.rs
idrbm_core/src/datatypes/sequences/aastring/generic/: borrowed.rs
idrbm_core/src/utils/: compound_header.rs  mod.rs  parse_regions.rs  parse_variants.rs  read_csvs.rs  read_fasta.rs  read_file.rs  read_regions.rs  read_to_end.rs  read_variants.rs
idrbm_filtrgns/: Cargo.toml
idrbm_filtrgns/src/: main.rs
idrbm_filtzsc/: Cargo.toml
idrbm_filtzsc/src/: main.rs
idrbm_genrand/: Cargo.toml
idrbm_genrand/src/: main.rs
idrbm_gensubs/: Cargo.toml
idrbm_gensubs/src/: main.rs
idrbm_getup/: Cargo.toml
idrbm_getup/src/: checkpoint.rs  input.rs  main.rs
idrbm_getup/src/web/: mod.rs  results.rs  submit.rs
