[package]
name = "idrbm_compzsc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bumpalo = { version = "3.20.2", features = ["allocator-api2", "boxed"] }
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
hashbrown = { version = "0.16.1", features = ["allocator-api2"] }
idrbm_core = { version = "0.1.0", path = "../idrbm_core" }
